update image name in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.1'
 services:
   zookeeper:
-    image: helterscelter/zk
+    image: helterscelter/zookeeper
     expose:
       - "2181"
     volumes:
