attempt to make docker-gen report all containers even if stopped
stopping a zookeeper container should not cause the other running containers
to be re-generated and restarted. however, at the moment that is exactly what
happens.. when stopping a container, docker-gen triggers and does not pass the
stopped container in the emitted data set so the templates rebuild the server list
without the stopped container present. then docker-gen triggers the ZK restart..
net result is stopping a container, removes the container from the cluster

ofcourse starting the container brings it back into the container, so it's not all bad
but ideally if docker-gen passed stopped containers it would recognize that the
config files haven't changed and therefore would not restart the running zk instances
which is ultmately a better option.

longer term the dynamic config settings in the zk 3.5 branch  should be used instead of this

--- a/etc/dockergen/zookeeper.dockergen.template
+++ b/etc/dockergen/zookeeper.dockergen.template
@@ -2,7 +2,7 @@
 template = "${ZK_CONFIGDIR}/myid.template"
 dest = "${ZK_DATADIR}/myid"
 onlyexposed = true
-includestopped = true
+IncludeStopped = true
 watch = true
 wait = "500ms:2s"
 
@@ -11,7 +11,7 @@ wait = "500ms:2s"
 template = "${ZK_CONFIGDIR}/zoo.cfg.template"
 dest = "${ZK_CONFIGDIR}/zoo.cfg"
 onlyexposed = true
-includestopped = true
+IncludeStopped = true
 notifycmd = "chown -R zookeeper:zookeeper ${ZK_DATALOGDIR} ${ZK_DATADIR} ${ZK_CONFIGDIR} && supervisorctl restart zookeeper"
 watch = true
 wait = "500ms:2s"
