--- a/etc/supervisor/conf.d/zk_dockergen.conf
+++ b/etc/supervisor/conf.d/zk_dockergen.conf
@@ -1,5 +1,5 @@
 [program:zk_dockergen]
-command=docker-gen -config /etc/dockergen/zookeeper.dockergen
+command=docker-gen -config /etc/dockergen/zookeeper.dockergen -include-stopped
 directory=/etc/dockergen
 autorestart=true
 autostart=true
